@@ -1,13 +1,13 @@
 Package: stm
 Type: Package
 Title: Estimation of the Structural Topic Model
-Version: 1.0.0
-Date: 2014-10-02
+Version: 1.0.1
+Date: 2014-10-03
 Author: Margaret E. Roberts, Brandon M. Stewart and Dustin Tingley
 Maintainer: Brandon Stewart <bstewart@fas.harvard.edu>
 Depends: R (>= 2.10)
 Imports: matrixStats, splines, slam, lda, stringr, Matrix, glmnet
-Suggests: igraph, SnowballC, tm, huge, clue, wordcloud, KernSmooth
+Suggests: igraph, SnowballC, tm, huge, clue, wordcloud, KernSmooth, NLP
 LazyData: yes
 Description: The Structural Topic Model (STM) allows researchers 
   to estimate topic models with document-level covariates. 
