@@ -7,7 +7,7 @@ multiSTM <- function(mod.out, ref.model=NULL,
                      align.global=FALSE, mass.threshold=1, 
                      reg.formula=NULL, metadata=NULL, reg.nsims=100,
                      reg.parameter.index=2, verbose=TRUE){
-  if(align.global && !require(clue)) stop("Please install the clue package to use align.global=TRUE")
+  if(align.global && !requireNamespace("clue", quietly=TRUE)) stop("Please install the clue package to use align.global=TRUE")
   # Catch bad inputs
   if (is.null(mod.out$runout))
     stop("The mod.out argument must be a list of the type generated by selectModel().")
@@ -82,7 +82,7 @@ multiSTM <- function(mod.out, ref.model=NULL,
     
     # Perform topic alignment
     if(align.global==TRUE)
-      align <- solve_LSAP(ref.beta%*%t(betamod), maximum=TRUE)
+      align <- clue::solve_LSAP(ref.beta%*%t(betamod), maximum=TRUE)
     else{
       product <- ref.beta%*%t(betamod)
       align <- apply(product,1,which.max)
@@ -171,7 +171,7 @@ multiSTM <- function(mod.out, ref.model=NULL,
       if(ncol(betamod)!=ncol(ref.beta)) next
       
       if(align.global==TRUE)
-        align <- solve_LSAP(ref.beta%*%t(betamod), maximum=TRUE)
+        align <- clue::solve_LSAP(ref.beta%*%t(betamod), maximum=TRUE)
       
       if(align.global==FALSE){
         product <- ref.beta%*%t(betamod)
